--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@
         text-decoration: lined;
         color: white;
     }
+    .tengah .kiri .komentar .foto {
+        height: 30px;
+        width: 30px;
+    }
     .tengah .kiri .komentar .reply {
         width: 100%;
         height: 20%;
